fixes, disposable object and timing
- ADD: class for disposing a list of objects
- ADD: additional + and - operators for Time struct
- CHG: code cleanups and improvments
- FIX: removed var keywords for pre C# 3.0 code

--- a/MarcelJoachimKloubert.CLRToolbox.20/MarcelJoachimKloubert.CLRToolbox.20.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.20/MarcelJoachimKloubert.CLRToolbox.20.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AggregateDisposer.cs" />
     <Compile Include="AppTime.cs" />
     <Compile Include="Caching\DelegateCache.CachedItem.cs">
       <DependentUpon>DelegateCache.cs</DependentUpon>
@@ -122,6 +123,7 @@
     <Compile Include="Diagnostics\LoggerFacadeBase.LogMessage.dotNET.cs">
       <DependentUpon>LoggerFacadeBase.cs</DependentUpon>
     </Compile>
+    <Compile Include="DisposeObjectEventArgs.cs" />
     <Compile Include="ErrorHandlerBase.cs" />
     <Compile Include="Execution\Functions\FunctionBase.Classes.cs">
       <DependentUpon>FunctionBase.cs</DependentUpon>
