--- a/MarcelJoachimKloubert.CLRToolbox.40/MarcelJoachimKloubert.CLRToolbox.40.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.40/MarcelJoachimKloubert.CLRToolbox.40.csproj
@@ -52,6 +52,9 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\AggregateDisposer.cs">
+      <Link>AggregateDisposer.cs</Link>
+    </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\AppTime.cs">
       <Link>AppTime.cs</Link>
     </Compile>
@@ -282,6 +285,9 @@
     </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\DisposableBase.cs">
       <Link>DisposableBase.cs</Link>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\DisposeObjectEventArgs.cs">
+      <Link>DisposeObjectEventArgs.cs</Link>
     </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\ErrorHandlerBase.cs">
       <Link>ErrorHandlerBase.cs</Link>
