added FileCompare project

--- a/.gitignore
+++ b/.gitignore
@@ -235,3 +235,7 @@ Projects/MarcelJoachimKloubert.RoboGit/MarcelJoachimKloubert.RoboGit.v11.suo
 /Projects/MarcelJoachimKloubert.RoboGit/MarcelJoachimKloubert.RoboGitGui/obj
 /Projects/MarcelJoachimKloubert.RoboGit/MarcelJoachimKloubert.RoboGitGui/bin
 Projects/MarcelJoachimKloubert.RoboGit/MarcelJoachimKloubert.RoboGit.v12.suo
+/Projects/MarcelJoachimKloubert.FileCompare/MarcelJoachimKloubert.FileCompare/obj
+/Projects/MarcelJoachimKloubert.FileCompare/MarcelJoachimKloubert.FileCompare/bin
+Projects/MarcelJoachimKloubert.FileCompare/MarcelJoachimKloubert.FileCompare/MarcelJoachimKloubert.FileCompare.csproj.user
+Projects/MarcelJoachimKloubert.FileCompare/MarcelJoachimKloubert.FileCompare.v12.suo
