FileCompare, fixes, code improvements & cleanups
- DirectoryComparer framework
- CHG: improved helper methods Count() and SequenceEqual()
- ADD: started to implement GUI version of FileCompare in Modern UI
style
- FIX: removed duplicate references to SynchronizedObservableCollection
in WPF library (.NET 4 and later)

--- a/.gitignore
+++ b/.gitignore
@@ -239,3 +239,7 @@ Projects/MarcelJoachimKloubert.RoboGit/MarcelJoachimKloubert.RoboGit.v12.suo
 /Projects/MarcelJoachimKloubert.FileCompare/MarcelJoachimKloubert.FileCompare/bin
 Projects/MarcelJoachimKloubert.FileCompare/MarcelJoachimKloubert.FileCompare/MarcelJoachimKloubert.FileCompare.csproj.user
 Projects/MarcelJoachimKloubert.FileCompare/MarcelJoachimKloubert.FileCompare.v12.suo
+/Projects/MarcelJoachimKloubert.FileCompare/MarcelJoachimKloubert.FileCompare.WPF/obj
+/Projects/MarcelJoachimKloubert.FileCompare/MarcelJoachimKloubert.FileCompare.WPF/bin
+/Projects/MarcelJoachimKloubert.FileCompare/MarcelJoachimKloubert.FileCompare.WPF/config.ini
+/Projects/MarcelJoachimKloubert.FileCompare/packages
