--- a/MarcelJoachimKloubert.CLRToolbox.XNA/MarcelJoachimKloubert.CLRToolbox.XNA.40/MarcelJoachimKloubert.CLRToolbox.XNA.40.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.XNA/MarcelJoachimKloubert.CLRToolbox.XNA.40/MarcelJoachimKloubert.CLRToolbox.XNA.40.csproj
@@ -530,6 +530,9 @@
     <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\IIdentifiable.cs">
       <Link>IIdentifiable.cs</Link>
     </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\IO\CompareFileSystemItemsEventArgs.cs">
+      <Link>IO\CompareFileSystemItemsEventArgs.cs</Link>
+    </Compile>
     <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\IO\ConsoleBase.cs">
       <Link>IO\ConsoleBase.cs</Link>
     </Compile>
@@ -541,6 +544,19 @@
       <Link>IO\ConsoleBase.Interface.cs</Link>
       <DependentUpon>ConsoleBase.cs</DependentUpon>
     </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\IO\DirectoryComparer.cs">
+      <Link>IO\DirectoryComparer.cs</Link>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\IO\DirectoryComparer.DirectoryComparerExecutionContext.cs">
+      <Link>IO\DirectoryComparer.DirectoryComparerExecutionContext.cs</Link>
+      <DependentUpon>DirectoryComparer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\IO\FileSystemItemDifferences.cs">
+      <Link>IO\FileSystemItemDifferences.cs</Link>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\IO\FoundDifferentFileSystemItemsEventArgs.cs">
+      <Link>IO\FoundDifferentFileSystemItemsEventArgs.cs</Link>
+    </Compile>
     <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\IO\GlobalConsole.cs">
       <Link>IO\GlobalConsole.cs</Link>
     </Compile>
@@ -550,6 +566,9 @@
     <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\IO\IConsole.dotNET.cs">
       <Link>IO\IConsole.dotNET.cs</Link>
       <DependentUpon>IConsole.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\IO\IDirectoryComparerExecutionContext.cs">
+      <Link>IO\IDirectoryComparerExecutionContext.cs</Link>
     </Compile>
     <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\IO\IFile.cs">
       <Link>IO\IFile.cs</Link>
