FileComparer WPF tool, DirectoryComparer, TrafficLights and fixes
- ADD: TrafficLights enumeration to handle states that are similar to
traffic lights
- ADD: first alpha of FileComparer WPF based tool
- ADD: DirectoryComparer execution can be canceled now
- FIX: settings destination directory in constructor of
DirectoryComparer class
- FIX: comparing files in DirectoryComparerExecutionContext<TState>
class
- FIX: other minor fixes

--- a/MarcelJoachimKloubert.CLRToolbox.20/MarcelJoachimKloubert.CLRToolbox.20.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.20/MarcelJoachimKloubert.CLRToolbox.20.csproj
@@ -595,6 +595,7 @@
     <Compile Include="TMObject.Fields.cs">
       <DependentUpon>TMObject.cs</DependentUpon>
     </Compile>
+    <Compile Include="TrafficLights.cs" />
     <Compile Include="WritableTuple.cs" />
     <Compile Include="_Compatibility\System\Action.cs" />
     <Compile Include="_Compatibility\System\AggregateException.cs" />
