--- a/MarcelJoachimKloubert.CLRToolbox.XNA/MarcelJoachimKloubert.CLRToolbox.XNA.40/MarcelJoachimKloubert.CLRToolbox.XNA.40.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.XNA/MarcelJoachimKloubert.CLRToolbox.XNA.40/MarcelJoachimKloubert.CLRToolbox.XNA.40.csproj
@@ -879,6 +879,9 @@
     <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\TMObject.cs">
       <Link>TMObject.cs</Link>
     </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\TrafficLights.cs">
+      <Link>TrafficLights.cs</Link>
+    </Compile>
     <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\WritableTuple.cs">
       <Link>WritableTuple.cs</Link>
     </Compile>
