FileComparer, helper / extenstion methods, cleanups and improvements
- ADD: ToCsv() helper and extension methods for DataTable objects
- ADD: Is[Not]True() and Is[Not]False() extension methods
- UPD: icons of FileComparer WPF GUI
- CHG: code improvements and cleanups
- ADD: started to implement saving compare results to files

--- a/MarcelJoachimKloubert.CLRToolbox.20/MarcelJoachimKloubert.CLRToolbox.20.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.20/MarcelJoachimKloubert.CLRToolbox.20.csproj
@@ -214,6 +214,9 @@
     <Compile Include="Helpers\DataHelper.GetBytes.cs">
       <DependentUpon>DataHelper.cs</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\DataHelper.ToCsv.cs">
+      <DependentUpon>DataHelper.cs</DependentUpon>
+    </Compile>
     <Compile Include="Helpers\DataHelper.ToDbValue.cs">
       <DependentUpon>DataHelper.cs</DependentUpon>
     </Compile>
