added CryptoDrop project and made fixes

--- a/.gitignore
+++ b/.gitignore
@@ -243,3 +243,6 @@ Projects/MarcelJoachimKloubert.FileCompare/MarcelJoachimKloubert.FileCompare.v12
 /Projects/MarcelJoachimKloubert.FileCompare/MarcelJoachimKloubert.FileCompare.WPF/bin
 /Projects/MarcelJoachimKloubert.FileCompare/MarcelJoachimKloubert.FileCompare.WPF/config.ini
 /Projects/MarcelJoachimKloubert.FileCompare/packages
+/Projects/MarcelJoachimKloubert.CryptoDrop/MarcelJoachimKloubert.CryptoDrop/obj
+/Projects/MarcelJoachimKloubert.CryptoDrop/MarcelJoachimKloubert.CryptoDrop/bin
+Projects/MarcelJoachimKloubert.CryptoDrop/MarcelJoachimKloubert.CryptoDrop.v12.suo
