--- a/.gitignore
+++ b/.gitignore
@@ -246,3 +246,4 @@ Projects/MarcelJoachimKloubert.FileCompare/MarcelJoachimKloubert.FileCompare.v12
 /Projects/MarcelJoachimKloubert.CryptoDrop/MarcelJoachimKloubert.CryptoDrop/obj
 /Projects/MarcelJoachimKloubert.CryptoDrop/MarcelJoachimKloubert.CryptoDrop/bin
 Projects/MarcelJoachimKloubert.CryptoDrop/MarcelJoachimKloubert.CryptoDrop.v12.suo
+Projects/MarcelJoachimKloubert.CryptoDrop/MarcelJoachimKloubert.CryptoDrop/config.ini
