--- a/MarcelJoachimKloubert.CLRToolbox.35.Web/MarcelJoachimKloubert.CLRToolbox.35.Web.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.35.Web/MarcelJoachimKloubert.CLRToolbox.35.Web.csproj
@@ -55,6 +55,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="_Embedded\DotNetWikiBot\DotNetWikiBot.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="..\MarcelJoachimKloubert.CLRToolbox.20.Web\MarcelJoachimKloubert.CLRToolbox.Web.snk">
