added ClrDocToMediaWiki project

--- a/.gitignore
+++ b/.gitignore
@@ -247,3 +247,7 @@ Projects/MarcelJoachimKloubert.FileCompare/MarcelJoachimKloubert.FileCompare.v12
 /Projects/MarcelJoachimKloubert.CryptoDrop/MarcelJoachimKloubert.CryptoDrop/bin
 Projects/MarcelJoachimKloubert.CryptoDrop/MarcelJoachimKloubert.CryptoDrop.v12.suo
 Projects/MarcelJoachimKloubert.CryptoDrop/MarcelJoachimKloubert.CryptoDrop/config.ini
+/Projects/MarcelJoachimKloubert.ClrDocToMediaWiki/MarcelJoachimKloubert.ClrDocToMediaWiki/obj
+/Projects/MarcelJoachimKloubert.ClrDocToMediaWiki/MarcelJoachimKloubert.ClrDocToMediaWiki/bin
+Projects/MarcelJoachimKloubert.ClrDocToMediaWiki/MarcelJoachimKloubert.ClrDocToMediaWiki/config.ini
+Projects/MarcelJoachimKloubert.ClrDocToMediaWiki/MarcelJoachimKloubert.ClrDocToMediaWiki.v12.suo
