--- a/Projects/MarcelJoachimKloubert.ClrDocToMediaWiki/MarcelJoachimKloubert.ClrDocToMediaWiki/config.sample.ini
+++ b/Projects/MarcelJoachimKloubert.ClrDocToMediaWiki/MarcelJoachimKloubert.ClrDocToMediaWiki/config.sample.ini
@@ -1,7 +1,22 @@
 ﻿[MyAssemblyDoc]
+# assembly on local system
 assembly=C:\\assemblies\\myassembly.dll
+
+# display name of that task
 name=My assembly documentation
+
+# wiki base URL
 site=http://mywiki.example.com/
+
+# base namespace for the wiki pages
 namespace=CLRDoc
+
+# regex filter for CLR namespaces
+namespaceFilter=(^MarcelJoachimKloubert)(\\.)
+
+# credentials of the bot
 user=mybot
 password=the_secret_password_of_the_bot
+
+# is that task active (1) or not (0)
+is_active=1
