--- a/Projects/MarcelJoachimKloubert.ClrDocToMediaWiki/MarcelJoachimKloubert.ClrDocToMediaWiki/config.sample.ini
+++ b/Projects/MarcelJoachimKloubert.ClrDocToMediaWiki/MarcelJoachimKloubert.ClrDocToMediaWiki/config.sample.ini
@@ -12,7 +12,7 @@ site=http://mywiki.example.com/
 namespace=CLRDoc
 
 # regex filter for CLR namespaces
-namespaceFilter=(^MarcelJoachimKloubert)(\\.)
+namespaceFilter=^(MarcelJoachimKloubert)(\\.)
 
 # credentials of the bot
 user=mybot
