--- a/MarcelJoachimKloubert.CLRToolbox.40/MarcelJoachimKloubert.CLRToolbox.40.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.40/MarcelJoachimKloubert.CLRToolbox.40.csproj
@@ -1222,6 +1222,9 @@
     <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\_embedded\icsharpcode.sharpzlib\zip\ZipOutputStream.cs">
       <Link>_Embedded\ICSharpCode.SharpZLib\Zip\ZipOutputStream.cs</Link>
     </Compile>
+    <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\_embedded\markdownsharp\Markdown.cs">
+      <Link>_Embedded\MarkdownSharp\Markdown.cs</Link>
+    </Compile>
     <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\_embedded\newtonsoft.json\bson\BsonBinaryType.cs">
       <Link>_Embedded\Newtonsoft.Json\Bson\BsonBinaryType.cs</Link>
     </Compile>
