--- a/.gitignore
+++ b/.gitignore
@@ -251,3 +251,4 @@ Projects/MarcelJoachimKloubert.CryptoDrop/MarcelJoachimKloubert.CryptoDrop/confi
 /Projects/MarcelJoachimKloubert.ClrDocToMediaWiki/MarcelJoachimKloubert.ClrDocToMediaWiki/bin
 Projects/MarcelJoachimKloubert.ClrDocToMediaWiki/MarcelJoachimKloubert.ClrDocToMediaWiki/config.ini
 Projects/MarcelJoachimKloubert.ClrDocToMediaWiki/MarcelJoachimKloubert.ClrDocToMediaWiki.v12.suo
+MarcelJoachimKloubert.CLRToolbox.45/MarcelJoachimKloubert.CLRToolbox.45.csproj.user
